<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="@dimen/activity_horizontal_margin"
    tools:context="uy.com.ceoyphoibe.sgia_am.controladores.Lecturas"
    tools:ignore="MergeRootFrame" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <ImageView
                android:id="@+id/imagenFactorLectura"
                android:layout_width="70dp"
                android:layout_height="match_parent"
                android:contentDescription="@string/lecturas"
                android:src="@drawable/temperatura" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="70dp"
                android:gravity="center"
                android:orientation="vertical" >

                <TextView
                    android:id="@+id/nombreFactorLectura"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/nombreFactor"
                    android:textAppearance="?android:attr/textAppearanceMedium" />

                <TextView
                    android:id="@+id/unidadFactorLectura"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/unidadFactor"
                    android:textAppearance="?android:attr/textAppearanceSmall" />

                <TextView
                    android:id="@+id/limitesFactorLectura"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"

                    android:text="@string/limitesFactor"
                    android:textAppearance="?android:attr/textAppearanceSmall" />
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center" >

            <TextView
                android:id="@+id/textViewDispositivoAccion"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="4"
                android:gravity="center"
                android:text="@string/lecturaFecha"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <TextView
                android:id="@+id/textViewModeloDispositivoAccion"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="3"
                android:gravity="center"
                android:text="@string/lecturaHora"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <TextView
                android:id="@+id/textViewFechaAccion"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="3"
                android:gravity="center"
                android:text="@string/lecturaValor"
                android:textAppearance="?android:attr/textAppearanceMedium" />

        </LinearLayout>

        <ListView
            android:id="@+id/listaLecturas"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >
        </ListView>


</LinearLayout>
