<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal"
    android:padding="@dimen/activity_horizontal_margin">

    <ImageView
        android:id="@+id/imageViewGrupoActuadores"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_weight="8"
        android:contentDescription="@string/grupoActuadores"
        android:src="@drawable/grupo_actuadores" />

    <TextView
        android:id="@+id/nombreGrupoActuadores"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="5"
        android:gravity="center"
        android:padding="@dimen/activity_horizontal_margin"
        android:text="@string/nombreGrupoActuadores"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:id="@+id/estadoGrupoActuadores"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="7"
        android:gravity="center"
        android:padding="@dimen/activity_horizontal_margin"
        android:text="@string/estadoGrupoActuadores"
        android:textAppearance="?android:attr/textAppearanceSmall" />

</LinearLayout>