<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/LinearLayout1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    
    android:padding="@dimen/activity_horizontal_margin"
    tools:context="uy.com.ceoyphoibe.sgia_am.Acciones$PlaceholderFragment" >

    <LinearLayout
        android:id="@+id/LinearLayout2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/gris4"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/textViewDispositivoAccion"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="4"
            android:gravity="center"
            android:text="@string/nombreDispositivo"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="@color/grisOscuro" />

        <TextView
            android:id="@+id/textViewModeloDispositivoAccion"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="6"
            android:text="@string/modeloDispositivo"
            android:textAppearance="?android:attr/textAppearanceSmall" 
            android:textColor="@color/grisOscuro"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/gris3" >

        <TextView
            android:id="@+id/textViewFechaAccion"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="4"
            android:gravity="center"
            android:text="@string/fechaAccion"
            android:textAlignment="center"
            android:textAppearance="?android:attr/textAppearanceSmall" 
            android:textColor="@color/grisOscuro"/>

        <TextView
            android:id="@+id/textViewHoraAccion"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="2"
            android:gravity="center"
            android:text="@string/horaAccion"
            android:textAlignment="center"
            android:textAppearance="?android:attr/textAppearanceSmall" 
            android:textColor="@color/grisOscuro"/>

        <TextView
            android:id="@+id/textViewAccion"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="4"
            android:gravity="center"
            android:text="@string/tipoAccion"
            android:textAlignment="center"
            android:textAppearance="?android:attr/textAppearanceSmall" 
            android:textColor="@color/grisOscuro"/>
    </LinearLayout>

</LinearLayout>
