<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/LinearLayout1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="uy.com.ceoyphoibe.sgia_am.Lecturas$PlaceholderFragment" >

    <TextView
        android:id="@+id/fragFechaLectura"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="5"
        android:gravity="center"
        android:text="@string/lecturaFecha"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:id="@+id/fragHoraLectura"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="2"
        android:gravity="center"
        android:text="@string/lecturaHora"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:id="@+id/fragValorLectura"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="3"
        android:gravity="center"
        android:text="@string/lecturaValor"
        android:textAppearance="?android:attr/textAppearanceMedium" />

</LinearLayout>
