<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/LinearLayout1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="uy.com.ceoyphoibe.sgia_am.Logs$PlaceholderFragment" >

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="8"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/nombreTipoLog"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/nombreTipoLog"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <TextView
            android:id="@+id/fechaHoraLog"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/fechaHoraLog"
            android:textAppearance="?android:attr/textAppearanceSmall" />

    </LinearLayout>

    <ImageView
        android:id="@+id/imageViewGrupoActuador"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_weight="2"
        android:src="@drawable/lupa"
        android:contentDescription="@string/detalles" />

</LinearLayout>
