<?xml version="1.0" encoding="utf-8"?>
<ScrollView 
      xmlns:android="http://schemas.android.com/apk/res/android"
      android:id="@+id/scroll" 
      android:layout_width="fill_parent"
      android:layout_height="wrap_content" >
      
<LinearLayout 
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="@dimen/activity_horizontal_margin" >

    <ImageView
        android:id="@+id/imageView_imagenEstadoPlaca"
        android:layout_width="90dp"
        android:layout_height="90dp"
        android:layout_marginTop="15dp"
        android:adjustViewBounds="true"
        android:contentDescription="@string/imagenPlaca"
        android:scaleType="fitXY"
        android:src="@drawable/placa" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical"
        android:background="@drawable/rounded_layout"
        android:padding="@dimen/activity_horizontal_margin" >

        <TextView
            android:id="@+id/DescripcionPlaca"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/descripcionPlaca"
            android:textAppearance="?android:attr/textAppearanceLarge" />

    </LinearLayout>

        
    <Space
        android:layout_width="wrap_content"
        android:layout_height="30dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/rounded_layout"
        android:orientation="vertical"
        android:padding="@dimen/activity_horizontal_margin" >

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:orientation="horizontal"
            android:weightSum="1" >

            <TextView
                android:id="@+id/textView_Serie"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="0.4"
                android:text="@string/SeriePlaca"
                android:textAppearance="?android:attr/textAppearanceSmall" />

            <Space
                android:layout_width="wrap_content"
                android:layout_height="15dp"
                android:layout_weight="0.4" />

            <TextView
                android:id="@+id/Serie"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="0.51"
                android:text="@string/SeriePlaca"
                android:textAppearance="?android:attr/textAppearanceSmall" />
        </LinearLayout>
        
        <Space
        android:layout_width="wrap_content"
        android:layout_height="30dp" />

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:orientation="horizontal"
            android:weightSum="1" >

            <TextView
                android:id="@+id/textView_Estado"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="0.4"
                android:text="@string/estadoplaca"
                android:textAppearance="?android:attr/textAppearanceSmall" />

            <Space
                android:layout_width="wrap_content"
                android:layout_height="15dp"
                android:layout_weight="0.4" />

            <TextView
                android:id="@+id/EstadoPlaca"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="0.43"
                android:text="@string/estadoplaca"
                android:textAppearance="?android:attr/textAppearanceSmall" />
        </LinearLayout>
        
        <Space
        android:layout_width="wrap_content"
        android:layout_height="30dp" />

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:orientation="horizontal"
            android:weightSum="1" >

            <TextView
                android:id="@+id/textView_Alerta"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="0.4"
                android:text="@string/estadoAlertaPlaca"
                android:textAppearance="?android:attr/textAppearanceSmall" />

            <Space
                android:layout_width="wrap_content"
                android:layout_height="15dp"
                android:layout_weight="0.4" />

            <TextView
                android:id="@+id/Alerta"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="0.42"
                android:text="@string/estadoAlertaPlaca"
                android:textAppearance="?android:attr/textAppearanceSmall" />
        </LinearLayout>

    </LinearLayout>

</LinearLayout>
 </ScrollView>